Update js tspconfig

--- a/specification/devcenter/DevCenter/tspconfig.yaml
+++ b/specification/devcenter/DevCenter/tspconfig.yaml
@@ -26,12 +26,13 @@ options:
   "@azure-tools/typespec-ts":
     title: "Azure Developer DevCenter"
     generateMetadata: true
+    package-dir: "developer-devcenter-rest"
     generateTest: true
     "emitter-output-dir": "{output-dir}"
     packageDetails:
       name: "@azure-rest/developer-devcenter"
       description: "Azure Developer DevCenter Client"
-      version: "1.0.0"
+      version: "1.0.0-beta.3"
   "@azure-tools/typespec-java":
     package-dir: "azure-developer-devcenter"
     namespace: com.azure.developer.devcenter
